# redis-service

client/: README.md  pyproject.toml
client/redis_service_client/: __init__.py  client.py
